apps/black-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: black-dev
  labels:
    name: black-dev
